--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ button:focus {
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
 .section_gap {
-  padding: 200px 0; }
+  padding: 35px 0; }
   @media (max-width: 1199px) {
     .section_gap {
       padding: 80px 0; } }
@@ -2535,11 +2535,12 @@ h6 {
     border: 1px solid transparent;
     box-shadow: 0px 8px 30px rgba(118, 85, 225, 0.15); }
     .single-brand-item:hover img {
-      filter: brightness(0%);
+      /* filter: brightness(0%);
       -o-filter: brightness(0%);
       -ms-filter: brightness(0%);
       -moz-filter: brightness(0%);
-      -webkit-filter: brightness(0%); }
+      -webkit-filter: brightness(0%); */
+     }
 
 .client-info {
   padding: 25px 30px;
@@ -3304,3 +3305,6 @@ h6 {
 /*---------------------------------------------------- */
 
 /*# sourceMappingURL=style.css.map */
+.justify-content-center1{
+  margin-top: 15%;
+}
