--- a/css/style.css
+++ b/css/style.css
@@ -229,13 +229,13 @@ button:focus {
       .header_area .navbar .nav .nav-item .nav-link {
         font: 500 14px/100px "Rubik", sans-serif;
         text-transform: uppercase;
-        color: #000000;
+        color: white;
         padding: 0px;
         display: inline-block; }
         .header_area .navbar .nav .nav-item .nav-link:after {
           display: none; }
       .header_area .navbar .nav .nav-item:hover .nav-link, .header_area .navbar .nav .nav-item.active .nav-link {
-        color: #4458dc; }
+        color: #FF5722; }
       .header_area .navbar .nav .nav-item.submenu {
         position: relative; }
         .header_area .navbar .nav .nav-item.submenu ul {
@@ -2638,6 +2638,7 @@ h6 {
           margin-right: 20px; } }
 
 .portfolio_box {
+  text-align: center;
   margin-bottom: 80px; }
   @media (max-width: 767px) {
     .portfolio_box {
@@ -3307,4 +3308,10 @@ h6 {
 /*# sourceMappingURL=style.css.map */
 .justify-content-center1{
   margin-top: 15%;
+}
+.avatar {
+  vertical-align: middle;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
