vicky pushed on 28/06/2019 5:38pm

--- a/css/style.css
+++ b/css/style.css
@@ -2862,7 +2862,7 @@ h6 {
   background: transparent; }
 
 .subscription .info.valid {
-  color: green; }
+  color: lime; }
 
 .subscription .info.error {
   color: red; }
